fixing welcome alignment

--- a/src/main/webapp/css/tdar-base.css
+++ b/src/main/webapp/css/tdar-base.css
@@ -244,6 +244,7 @@ header .welcome {
 	top: 11px;
 	right: 0;
 	margin: 0;
+	margin-right:12px !important;	
 	font-weight: 700;
 	font-size: 11px;
 	color: #999;
